@@ -188,7 +188,8 @@ def __font_size_setting():
 
 def __layout_of_window_titlebar_buttons():
     label = gtk.Label(_('The layout of window title-bar buttons'))
-    label.set_tooltip_text(_('GConf key: ') + '/app/metacity/general/button_layout')
+    label.set_tooltip_text(_('GConf key: ') + '/app/metacity/general/button_layout\n'
+                           'It\'s Just can use in Metacity.')
     o = GConfComboBox('/apps/metacity/general/button_layout', 
                       [_('GNOME classic'), _('MAC OS X'), _('Ubuntu Lucid')],
                       ['menu:minimize,maximize,close', 'close,minimize,maximize:menu', 'maximize,minimize,close:'],) 
@@ -437,6 +438,64 @@ def __shortcut_setting():
         table.attach(o, 1, 4, i, i+1, gtk.FILL, gtk.FILL)
     return Setting(table, _('ShortCut Setting'), ['shortcut'])
 
+def __compiz_setting():
+    table = gtk.Table()
+    table.set_col_spacings(5)
+    table.set_row_spacings(10)
+## Window Decorator    
+    label = gtk.Label(_('Set Window Decorator:'))
+    label.set_alignment(0, 0.5)
+    label.set_tooltip_text(_('GConf key: ') + '/apps/compiz/plugins/decoration/allscreens/options/command\n'
+                           'It\'s can be effect after next startup')
+    hbox = gtk.HBox()
+    o = GConfComboBox('/apps/compiz/plugins/decoration/allscreens/options/command', 
+                      [_('Metacity'), _('Emerald')],
+                      ['/usr/bin/compiz-decorator', 'emerald --replace',] ) 
+    hbox.pack_start(label, False)
+    hbox.pack_start(o, False, True, 20)
+    table.attach(hbox, 0, 1, 0, 1, gtk.FILL, gtk.FILL)
+## Compiz Effect    
+    def disable_minimize_effects(button):
+        assert isinstance(button, gtk.Button)
+        import gconf
+        g = gconf.client_get_default()
+        value = []
+        g.set_list('/apps/compiz/plugins/animation/screen0/options/minimize_effects', gconf.VALUE_STRING, value)
+    def random_all_effects(button):
+        assert isinstance(button, gtk.Button)
+        import gconf
+        g = gconf.client_get_default()
+        g.set_bool('/apps/compiz/plugins/animation/screen0/options/all_random', True)
+    n = gtk.Button(_('Disable Minimize Effect'))
+    n.connect('clicked', disable_minimize_effects)
+    n.set_tooltip_text(_('GConf key: ')+'/apps/nautilus/list_view/default_visible_columns\n'
+                       'you can reset it in CompizConfig Settings Manager')
+    m = gtk.Button(_('Random All Effects'))
+    m.set_tooltip_text(_('GConf Key: ') + '/apps/compiz/plugins/animation/screen0/options/all_random\n'
+                       'All effects are chosen randomly, ignoring the selected effect. '
+                       'If None is selected for an event, that event won\'t be animated.')
+    m.connect('clicked', random_all_effects)
+    hbox = gtk.HBox()
+    hbox.pack_start(m, False)
+    hbox.pack_start(n, False, True, 20)
+    table.attach(hbox, 0, 1, 1, 2, gtk.FILL, gtk.FILL)
+## number of desktop    
+    label = gtk.Label(_('Screen size multiplier in horizontal '))
+    label.set_alignment(0, 0.5)
+    label.set_tooltip_text( _('GConf Key: ') + '/apps/compiz/general/screen0/options/hsize' )
+    o = GConfHScale( '/apps/compiz/general/screen0/options/hsize', 1, 32 )
+    table.attach(label, 0, 1, 2, 3, gtk.FILL, gtk.FILL)
+    table.attach(o, 1, 2, 2, 3, gtk.FILL|gtk.EXPAND, gtk.FILL)
+    label = gtk.Label(_('Screen size multiplier in vertical '))
+    label.set_alignment(0, 0.5)
+    label.set_tooltip_text( _('GConf Key: ') + '/apps/compiz/general/screen0/options/vsize' )
+    o = GConfHScale( '/apps/compiz/general/screen0/options/vsize', 1, 32 )
+    table.attach(label, 0, 1, 3, 4, gtk.FILL, gtk.FILL)
+    table.attach(o, 1, 2, 3, 4, gtk.FILL|gtk.EXPAND, gtk.FILL)
+    
+    
+    return Setting(table, _('CompizConfig Settings'), ['window'])
+
 def get():
     try:
         import gconf
@@ -459,6 +518,7 @@ def get():
             __layout_of_window_titlebar_buttons(),
             __more_nautilus_settings(),
             __shortcut_setting(),
+            __compiz_setting(),
             ]
     except:
         import traceback
