@@ -1,3 +1,10 @@
+2010-03-23 MA Yue <velly.empire@gmail.com>
+
+    * Add the compizConfig Setting include:
+    * set Window Decorator
+    * Random All Effects, Disable Minimize Effect
+    * set multiplier of screen size
+
 2010-03-21 MA Yue <velly.empire@gmail.com>
     
     * Add the Shortcut Function
